Java-17, no virtualhreads load keys from keystore lazy manner